cpp/inspireface/c_api/inspireface.h


typedef struct HFImageBitmapData {
    HPUInt8 data;     
    HInt32 width;     
    HInt32 height;    
    HInt32 channels;  
} HFImageBitmapData, *PHFImageBitmapData;
HYPER_CAPI_EXPORT extern HResult HFImageBitmapWriteToFile(HFImageBitmap handle, HPath filePath);
HYPER_CAPI_EXPORT extern HResult HFImageBitmapDrawRect(HFImageBitmap handle, HFaceRect rect, HColor color, HInt32 thickness);
HYPER_CAPI_EXPORT extern HResult HFImageBitmapDrawCircleF(HFImageBitmap handle, HPoint2f point, HInt32 radius, HColor color, HInt32 thickness);
HYPER_CAPI_EXPORT extern HResult HFImageBitmapDrawCircle(HFImageBitmap handle, HPoint2i point, HInt32 radius, HColor color, HInt32 thickness);
HYPER_CAPI_EXPORT extern HResult HFImageBitmapGetData(HFImageBitmap handle, PHFImageBitmapData data);
HYPER_CAPI_EXPORT extern HResult HFImageBitmapShow(HFImageBitmap handle, HString title, HInt32 delay);
typedef struct HFResourcePackInfo {
    HFUInt32 structSize;
    HFUInt32 structVersion;
    HFUInt32 archiveFileCount;
    HFUInt32 modelCount;
    HChar tag[HF_RESOURCE_PACK_TAG_CAPACITY];
    HChar version[HF_RESOURCE_PACK_VERSION_CAPACITY];
    HChar major[HF_RESOURCE_PACK_MAJOR_CAPACITY];
    HChar releaseDate[HF_RESOURCE_PACK_RELEASE_CAPACITY];
    HFUInt64 reserved[8];
} HFResourcePackInfo, *PHFResourcePackInfo;
HYPER_CAPI_EXPORT extern HFStatus HFValidateResourcePack(HPath resourcePath, PHFResourcePackInfo info);
HYPER_CAPI_EXPORT extern HResult HFLaunchInspireFace(HPath resourcePath);
HYPER_CAPI_EXPORT extern HResult HFReloadInspireFace(HPath resourcePath);
HYPER_CAPI_EXPORT extern HResult HFTerminateInspireFace();
HYPER_CAPI_EXPORT extern HResult HFQueryInspireFaceLaunchStatus(HPInt32 status);
HYPER_CAPI_EXPORT extern HResult HFQueryExpansiveHardwareRGACompileOption(HPInt32 enable);
HYPER_CAPI_EXPORT extern HResult HFSetExpansiveHardwareRockchipDmaHeapPath(HPath path);
HYPER_CAPI_EXPORT extern HResult HFQueryExpansiveHardwareRockchipDmaHeapPath(HString path);
HYPER_CAPI_EXPORT extern HResult HFQueryExpansiveHardwareRockchipDmaHeapPathWithSize(HString path, HInt32 bufferSize);
typedef enum HFImageProcessingBackend {
    HF_IMAGE_PROCESSING_CPU = 0,  
    HF_IMAGE_PROCESSING_RGA = 1,  
} HFImageProcessingBackend;
HYPER_CAPI_EXPORT extern HResult HFSwitchImageProcessingBackend(HFImageProcessingBackend backend);
HYPER_CAPI_EXPORT extern HResult HFSetImageProcessAlignedWidth(HInt32 width);
typedef enum HFAppleCoreMLInferenceMode {
    HF_APPLE_COREML_INFERENCE_MODE_CPU = 0,  
    HF_APPLE_COREML_INFERENCE_MODE_GPU = 1,  
    HF_APPLE_COREML_INFERENCE_MODE_ANE = 2,  
} HFAppleCoreMLInferenceMode;
HYPER_CAPI_EXPORT extern HResult HFSetAppleCoreMLInferenceMode(HFAppleCoreMLInferenceMode mode);
HYPER_CAPI_EXPORT extern HResult HFSetCudaDeviceId(HInt32 device_id);
HYPER_CAPI_EXPORT extern HResult HFGetCudaDeviceId(HPInt32 device_id);
HYPER_CAPI_EXPORT extern HResult HFPrintCudaDeviceInfo();
HYPER_CAPI_EXPORT extern HResult HFGetNumCudaDevices(HPInt32 num_devices);
HYPER_CAPI_EXPORT extern HResult HFCheckCudaDeviceSupport(HPInt32 is_support);
typedef struct HFSessionCustomParameter {
    HInt32 enable_recognition;           
    HInt32 enable_liveness;              
    HInt32 enable_ir_liveness;           
    HInt32 enable_mask_detect;           
    HInt32 enable_face_quality;          
    HInt32 enable_face_attribute;        
    HInt32 enable_interaction_liveness;  
    HInt32 enable_detect_mode_landmark;  
    HInt32 enable_face_pose;             
    HInt32 enable_face_emotion;          
} HFSessionCustomParameter, *PHFSessionCustomParameter;
typedef enum HFDetectMode {
    HF_DETECT_MODE_ALWAYS_DETECT,       
    HF_DETECT_MODE_LIGHT_TRACK,         
    HF_DETECT_MODE_TRACK_BY_DETECTION,  
} HFDetectMode;