cpp/inspireface/c_api/intypedef.h

typedef void*               HFImageBitmap;                    
typedef float               HFloat;                           
typedef signed int			HInt32;                           
typedef signed int*			HPInt32;                          
typedef int32_t             HFStatus;                         
typedef uint32_t            HFUInt32;                         
typedef uint64_t            HFUInt64;                         
typedef long                HResult;                          
typedef char*               HString;                          
typedef const char*         HPath;                            
typedef char                HChar;                            
typedef struct HFaceRect {
    HInt32 x;                                                 
    HInt32 y;                                                 
    HInt32 width;                                             
    HInt32 height;                                            
} HFaceRect, *PHFaceRect;                                     
typedef struct HPoint2f{
    HFloat x;                                                 
    HFloat y;                                                 
} HPoint2f, *PHPoint2f;
typedef struct HPoint2i{
    HInt32 x;                                                 
    HInt32 y;                                                 
} HPoint2i, *PHPoint2i;
typedef struct HColor {
    HFloat r;                                                 
    HFloat g;                                                 
    HFloat b;                                                 
} HColor, *PHColor;